QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Probable fix on the audio connections with regard to client/port
  (re)name changes (an ancient bug reported by Fons Adriaensen).

- Portaudio device selector is now available (after a patch handed
  by Torben Hohn and Stephane Letz).

- A couple of primitive D-Bus interface slots have been introduced,
  giving the option to start/stop the jackd server from the system
  bus eg. via dbus-send --system / org.rncbc.qjackctl.start (.stop), 
  (a nice addition supplied by Robin Gareus, thanks).

- New command line option (-a, --active-patchbay=[path]) to specify
  and activate a given patchbay definition file (a simple patch sent
  by John Schneiderman, thanks).

- Added one significant digit to DSP Load percentage status display.

- Tentative support for netjack (slave) by adding the "net" driver to
  the existing backend driver options on the Setup/Settings section.
  (EXPERIMENTAL)

- Converted obsolete QMessageBox forms to standard buttons.

- New patchbay snapshot now raises the dirty flag and allows for the
  immediate salvage of patchbay definition profile.

- Conditional build for JACK port aliases support (JACK >= 0.109.2).

- Alternate icon sizes other than default 16x16, are now effective to
  the Connections widget (Setup/Dislay/Connections Window/Icon size).


0.3.4  2008-12-05  Patchbay snapshot revamp.

- Introducing the very first and complete translations in-package:
  German (de), Spanish (es), French (fr) and Russian (ru); credits
  in TRANSLATORS.

- At last, after years of retarded procrastination, the old infamous
  patchbay snapshot feature has been the subject of a almost complete
  rewrite and it does try to give a way better mapping of all actual
  and current running client/port connections, both JACK (audio, MIDI)
  and ALSA MIDI, of course ;)

- On Setup/Settings/Parameters dialog, all device selection options