@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(QjackCtl, 0.3.4.15, rncbc@rncbc.org, qjackctl)
+AC_INIT(QjackCtl, 0.3.4.16, rncbc@rncbc.org, qjackctl)
 
 AC_CONFIG_SRCDIR(src/qjackctlMainForm.ui)
 AC_CONFIG_HEADERS(config.h)
@@ -21,8 +21,10 @@ AC_ARG_ENABLE(debug,
 
 if test "x$ac_debug" = "xyes"; then
    AC_DEFINE(CONFIG_DEBUG, 1, [Define if debugging is enabled.])
+   ac_stacktrace="yes"
    ac_debug="debug"
 else
+   ac_stacktrace="no"
    ac_debug="release"
 fi
 AC_SUBST(ac_debug)
@@ -62,6 +64,12 @@ if test "x$ac_dbus" = "xyes"; then
    ac_qdbus="qdbus"
 fi
 AC_SUBST(ac_qdbus)
+
+# Enable debugger stack-trace option (assumes --enable-debug).
+AC_ARG_ENABLE(stacktrace,
+  AC_HELP_STRING([--enable-stacktrace], [enable debugger stack-trace (default=no)]),
+  [ac_stacktrace="$enableval"])
+
 
 # Standard installation base dirs.
 ac_with_paths="/usr /usr/local"
@@ -229,7 +237,7 @@ if test "x$ac_portaudio" = "xyes"; then
 fi
 
 AC_SUBST(ac_libs)
-AC_SUBST(ac_incpath)
+
 
 # Checks for header files.
 AC_HEADER_STDC
@@ -285,6 +293,14 @@ if test "x$ac_portaudio" = "xyes"; then
       ac_portaudio="no"
    fi
 fi
+
+# Check for debugging stack-trace.
+if test "x$ac_stacktrace" = "xyes"; then
+   AC_DEFINE(CONFIG_STACKTRACE, 1, [Define if debugger stack-trace is enabled.])
+fi
+
+AC_SUBST(ac_incpath)
+
 
 # Checks for typedefs, structures, and compiler characteristics.
 # AC_C_CONST
@@ -367,6 +383,8 @@ echo "  System tray icon support . . . . . . . . . . . . .: $ac_system_tray"
 echo "  D-Bus interface support  . . . . . . . . . . . . .: $ac_dbus"
 echo "  PortAudio interface support  . . . . . . . . . . .: $ac_portaudio"
 echo "  CoreAudio interface support  . . . . . . . . . . .: $ac_coreaudio"
+echo
+echo "  Debugger stack-trace (gdb) . . . . . . . . . . . .: $ac_stacktrace"
 echo
 echo "  Install prefix . . . . . . . . . . . . . . . . . .: $ac_prefix"
 echo
